Fixed z-index for modal windows

--- a/src/scss/modules/_general.scss
+++ b/src/scss/modules/_general.scss
@@ -146,3 +146,7 @@ p {
   left: 0;
   z-index: 99999;
 }
+
+.modal {
+  z-index: 9999;
+}
